<resources>
    <string name="app_name">SandeTest</string>
    <string name="part1">肺区</string>
    <string name="report1">肺区</string>
    <string name="part2">心区</string>
    <string name="report2">心区</string>
    <string name="part3">肝胆区</string>
    <string name="report3">肝胆区</string>
    <string name="part4">脾胃区</string>
    <string name="report4">脾胃区</string>
    <string name="part5">肾区</string>
    <string name="report5">肾区</string>
    <string name="part6">生殖区</string>
    <string name="report6">生殖区</string>
    <string name="part7">其他部位...</string>
    <string name="report7">其他部位...</string>
    <string name="search">显示数据库查询的病人信息</string>

    <string name="feedback">反 馈</string>
    <string name="report_title">诊断结果</string>
    <string name="report_name">姓名:</string>
    <string name="report_sex">性别:</string>
    <string name="report_age">年龄:</string>
    <string name="report_date">时间:</string>
    <string name="diagnose_choose">选择患者照片</string>
    <string name="choose_color">选择罐印颜色</string>
    <string name="analyze">罐印分析：</string>
    <string name="diagnose">诊断结果：</string>
    <string name="treat">中医治疗原则：</string>
    <string name="cases">调理方案：</string>
    <string name="opinion">医嘱：加强锻炼、注意保暖、劳逸结合、保持正常心态、预防感染、提高免疫力、积极治疗、避免诱因、注意饮食。</string>
    <string name="process">（疗程）：前3次每天1次，后7次隔天1次，治疗共10次。</string>
    <string name="doctorview">临床医生意见：</string>
    <string name="btn_savedb">保 存</string>
    <string name="btn_pdf">生成pdf</string>
    <string name="btn_diagnose">诊 断</string>
    <string name="register_name">姓名</string>
    <string name="register_password">密码</string>
    <string name="register_id">身份证号码</string>
    <string name="register_clinic_name">诊所名称</string>
    <string name="register_clinic_address">诊所地址</string>
    <string name="register_host_id">主机编号</string>
    <string name="register_sex">性别</string>
    <string name="register_btn">注册</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_username">请输入姓名</string>
    <string name="hint_id">请输入身份证号码</string>
    <string name="hint_clinic_name">请输入诊所名称</string>
    <string name="hint_address">请输入诊所地址</string>
    <string name="rb_man">男</string>
    <string name="rb_woman">女</string>
    <string name="hint_host_id">请输入主机编号</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="register_phone">手机号码</string>
</resources>
